MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/Event_and_Activity__c.object-meta.xml
<CustomObject>
    <description>This is Created Regarding the Broker Portal.</description>
    <label>Event and Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Events OR Activities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events and Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>