MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>