MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Link</label>
    <type>Url</type>
</CustomField>