MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>