MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>