MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>