MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>This is a Field regarding Broker Portal.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>