MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open House</fullName>
            </value>
            <value>
                <fullName>Annual Awards</fullName>
            </value>
            <value>
                <fullName>Training Academy</fullName>
            </value>
            <value>
                <fullName>Broker Training</fullName>
            </value>
            <value>
                <fullName>Broker Meeting</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Seminars</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Kiosks</fullName>
            </value>
            <value>
                <fullName>Road Show</fullName>
            </value>
            <value>
                <fullName>Broker Briefing</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
                <isActive>false</isActive>
                <label>Presentation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>