MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/fields/Virtual_Tour_Link__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Tour_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Virtual Tour Link</label>
    <type>Url</type>
</CustomField>