MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/recordTypes/Default_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Default_Record_Type</fullName>
    <active>false</active>
    <label>Default Record Type</label>
</RecordType>