MODON MRE BPDEV/force-app/main/default/objects/Event_and_Activity__c/validationRules/End_date_Must_be_Greater_or_equal_today.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_Must_be_Greater_or_equal_today</fullName>
    <active>true</active>
    <description>End Date Must be Greater or Equal to today</description>
    <errorConditionFormula>End_Date_and_Time__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>End_Date_and_Time__c</errorDisplayField>
    <errorMessage>End Date &amp; Time must be today or a future date.</errorMessage>
</ValidationRule>